@@ -13,16 +13,6 @@
 <div id="content">
 
 <h1>Administration</h1>
-<a name="configuration"><h2>Configuration</h2></a>
-<p>
-    Consult and modify the Packetfence configuration 
-    (interface to the <code>pfcmd config</code> commands).<br>
-    Please note that this is equivalent to modifying the 
-    Packetfence configuration file <code>&lt;conf_dir&gt;/pf.conf</code>.
-    In particular, the changes are not immediately taken into account.
-    You'll have to restart the affected Packetfence services in order to
-    use the new configuration settings.
-</p>
 
 <a name="services"><h2>Services</h2></a>
 <p>
@@ -43,7 +33,6 @@
 
 <a name="ui_options"><h2>UI Options</h2></a>
 <p>
-    Choose between three different font sizes for the admin website.
     Define the default page which is opened when you login.  Chose the amount of time that graph images are cached.  Setting this to 0 will disable graph caching.
 </p>
 
