@@ -13,19 +13,47 @@
 <div id="content">
 
 <h1>Configuration</h1>
-<a name="violation"><h2>Violation</h2></a>
+<a name="configuration"><h2>Main</h2></a>
 <p>
-   To come ...
+    Consult and modify the main Packetfence configuration
+    (interface to the <code>pfcmd config</code> commands).<br>
+    Please note that this is equivalent to modifying the
+    Packetfence configuration file <code>&lt;conf_dir&gt;/pf.conf</code>.
+    In particular, the changes are not immediately taken into account.
+    You'll have to restart the affected Packetfence services in order to
+    use the new configuration settings.
 </p>
 
-<a name="scan"><h2>Scan</h2></a>
+<a name="violation"><h2>Switches</h2></a>
 <p>
-   To come ...
+   Consult and modify the Packetfence VLAN configuration
+   (interface to the <code>pfcmd switchconfig</code> commands).<br>
+    Please note that this is equivalent to modifying the
+    Packetfence configuration file <code>&lt;conf_dir&gt;/switches.conf</code>.
+    In particular, the changes are not immediately taken into account.
+    You'll have to restart the affected Packetfence services in order to
+    use the new configuration settings.
+</p>
+
+<a name="violation"><h2>Violation</h2></a>
+<p>
+   Consult and modify the Packetfence violation configuration
+   (interface to the <code>pfcmd violationconfig</code> commands).<br>
+    Please note that this is equivalent to modifying the
+    Packetfence configuration file <code>&lt;conf_dir&gt;/violations.conf</code>.
+    In particular, the changes are not immediately taken into account.
+    You'll have to restart the affected Packetfence services in order to
+    use the new configuration settings.
+</p>
+
+<a name="violation"><h2>Instructions</h2></a>
+<p>
+   Consult and modify the remediation instructions
 </p>
 
 <a name="fingerprint"><h2>Fingerprint</h2></a>
 <p>
-   To come ...
+   Consult and update the DHCP fingerprints.
 </p>
 
 </div>
