@@ -16,12 +16,12 @@
 
 <a name="scan"><h2>Scan</h2></a>
 <p>
-    To come ...
+    Define Nessus scans
 </p>
 
 <a name="results"><h2>Results</h2></a>
 <p>
-    To come ...
+    Consult the results of executed Nessus scans
 </p>
 
 </div>
