@@ -15,17 +15,17 @@
 <h1>Status</h1>
 <a name="dashboard"><h2>Dashboard</h2></a>
 <p>
-    To come ...
+    PacketFence Status Dashboard
 </p>
 
 <a name="reports"><h2>Reports</h2></a>
 <p>
-   To come ...
+    Historical reports
 </p>
 
 <a name="graphs"><h2>Graphs</h2></a>
 <p>
-   To come ...
+    Graphs
 </p>
 
 </div>
