@@ -16,12 +16,14 @@
 
 <a name="view"><h2>View</h2></a>
 <p>
-   To come ...
+    Consult, modify and delete violations.<br>
+    Interface to the <code>pfcmd violation</code> commands.
 </p>
 
 <a name="add"><h2>Add</h2></a>
 <p>
-   To come ...
+   Add a new violation.<br>
+   Interface to the <code>pfcmd violation add</code> command.
 </p>
 
 </div>
