@@ -27,6 +27,8 @@
           (http://www.packetfence.org/mantis/view.php?id=563)
         fixed link to nonexisting add.png file
           (http://www.packetfence.org/mantis/view.php?id=564)
+        updated web admin gui help file content
+          (http://www.packetfence.org/mantis/view.php?id=556)
 
 1.8.0
         unify log management
